# 6502Emu

./: .gitignore  LICENSE  README.md
6502Emu/: 6502Emu.sln  CMakeLists.txt
6502Emu/GuiHandler/: GuiHandler.vcxproj
6502Emu/Input Handler/: Input Handler.vcxproj
6502Emu/Main/: Main.vcxproj
6502Emu/Source/Assembler/: Assembler.cpp  Assembler.h  Assembler.vcxproj  Assembler.vcxproj.filters  CMakeLists.txt
6502Emu/Source/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  TypeDec.cpp  TypeDec.h  Utils.cpp  Utils.h
6502Emu/Source/Core/: CMakeLists.txt  CPU.cpp  CPU.h  Core.vcxproj  Core.vcxproj.filters  Emu.cpp  Emu.h  Globals.cpp  Globals.h  Instructions.cpp  LocalGui.cpp  LocalGui.h  Memory.cpp  Memory.h  System.cpp  System.h  Test.cpp  Test.h  stdIncludes.cpp  stdIncludes.h
6502Emu/Source/Debugger/: CMakeLists.txt  ConsoleWriter.cpp  ConsoleWriter.h  Debugger.cpp  Debugger.h  Debugger.vcxproj  Debugger.vcxproj.filters
6502Emu/Source/EmuWrapper/: CMakeLists.txt  Code.asm  Code.txt  EmuWrapper.vcxproj  EmuWrapper.vcxproj.filters  GuiRequest.h  Main.cpp
6502Emu/Source/FileHandler/: CMakeLists.txt  FileConverter.cpp  FileConverter.h  FileHandler.vcxproj  FileHandler.vcxproj.filters  FileLoader.cpp  FileLoader.h  FileUtils.h
6502Emu/Source/GuiHandler/: App.cpp  App.h  Frame.cpp  Frame.h  Gui.cpp  Gui.h  GuiHandler.cpp  GuiHandler.h  GuiHandler.vcxproj  GuiHandler.vcxproj.filters  Resource.cpp  Resource.fbp  ResourceHandler.cpp  ResourceHandler.h  noname.cpp  noname.h  resource.h  resource1.h  test.h
6502Emu/Source/GuiWrapper/: GUI.cpp  GUI.h  (+2 more)
(+60 files in other folders)
